--- a/ML0101EN_ProjLoan_Tanay.ipynb
+++ b/ML0101EN_ProjLoan_Tanay.ipynb
@@ -104,17 +104,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0% [                                                                              ]     0 / 23101\r",
-      " 35% [...........................                                                   ]  8192 / 23101\r",
-      " 70% [.......................................................                       ] 16384 / 23101\r",
       "100% [..............................................................................] 23101 / 23101"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'loan_train (5).csv'"
+       "'loan_train (1).csv'"
       ]
      },
      "execution_count": 2,
@@ -2108,15 +2104,15 @@
      "data": {
       "text/plain": [
        "2       0.534682\n",
-       "3       0.625227\n",
-       "4       0.656810\n",
+       "3       0.628100\n",
+       "4       0.653936\n",
        "5       0.644762\n",
-       "6       0.663842\n",
-       "7       0.660524\n",
-       "8       0.658575\n",
+       "6       0.661017\n",
+       "7       0.663381\n",
+       "8       0.661416\n",
        "9       0.652922\n",
-       "10      0.680672\n",
-       "mean    0.678839\n",
+       "10      0.672101\n",
+       "mean    0.679091\n",
        "Name: 10, dtype: float64"
       ]
      },
@@ -2324,8 +2320,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DT Jaccard Similarity Score:  0.5925925925925926\n",
-      "DT F1_Score:  0.6152263374485597\n"
+      "DT Jaccard Similarity Score:  0.5740740740740741\n",
+      "DT F1_Score:  0.5988805707115566\n"
      ]
     }
    ],
@@ -2358,7 +2354,15 @@
      "text": [
       "Labels that show up as a prediction of '0' =  {0}\n",
       "SVM Jaccard Similarity Score:  0.7407407407407407\n",
-      "SVM F1 Score:  0.851063829787234\n"
+      "SVM F1 Score:  0.6304176516942475\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tereo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -2367,7 +2371,7 @@
     "yhat_svm = SprtVM.predict(Xt)\n",
     "\n",
     "SprtVM_jss = jaccard_similarity_score(yt, yhat_svm)\n",
-    "SprtVM_f1 = f1_score(yt, yhat_svm, average='weighted', labels = np.unique(yhat_svm))\n",
+    "SprtVM_f1 = f1_score(yt, yhat_svm, average='weighted')#, labels = np.unique(yhat_svm))\n",
     "\n",
     "print(\"Labels that show up as a prediction of '0' = \", set(yt) - set(yhat_svm))\n",
     "print(\"SVM Jaccard Similarity Score: \", SprtVM_jss)\n",
@@ -2390,10 +2394,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labels that show up as a prediction of '0' =  {0}\n",
       "LR Jaccard Similarity Score:  0.7407407407407407\n",
-      "LR F1 Score:  0.851063829787234\n",
+      "LR F1 Score:  0.6304176516942475\n",
       "LR Log Loss:  0.5290038910720968\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tereo\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -2403,10 +2414,10 @@
     "yhat_prob = logreg.predict_proba(Xt)\n",
     "\n",
     "logreg_jss = jaccard_similarity_score(yt, yhat_lr)\n",
-    "logreg_f1 = f1_score(yt, yhat_lr, average='weighted', labels=np.unique(yhat_lr))\n",
+    "logreg_f1 = f1_score(yt, yhat_lr, average='weighted')#, labels=np.unique(yhat_lr))\n",
     "logreg_ll = log_loss(yt, yhat_prob)\n",
     "\n",
-    "print(\"Labels that show up as a prediction of '0' = \", set(yt) - set(yhat_lr))\n",
+    "#print(\"Labels that show up as a prediction of '0' = \", set(yt) - set(yhat_lr))\n",
     "print(\"LR Jaccard Similarity Score: \", logreg_jss)\n",
     "print(\"LR F1 Score: \", logreg_f1)\n",
     "print(\"LR Log Loss: \", logreg_ll)"
@@ -2459,20 +2470,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.592593</td>\n",
-       "      <td>0.615226</td>\n",
+       "      <td>0.574074</td>\n",
+       "      <td>0.598881</td>\n",
        "      <td>NA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SVM</th>\n",
        "      <td>0.740741</td>\n",
-       "      <td>0.851064</td>\n",
+       "      <td>0.630418</td>\n",
        "      <td>NA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
        "      <td>0.740741</td>\n",
-       "      <td>0.851064</td>\n",
+       "      <td>0.630418</td>\n",
        "      <td>0.529004</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2482,9 +2493,9 @@
       "text/plain": [
        "                     Jaccard   F1Score   LogLoss\n",
        "KNN                 0.666667  0.632840        NA\n",
-       "Decision Tree       0.592593  0.615226        NA\n",
-       "SVM                 0.740741  0.851064        NA\n",
-       "LogisticRegression  0.740741  0.851064  0.529004"
+       "Decision Tree       0.574074  0.598881        NA\n",
+       "SVM                 0.740741  0.630418        NA\n",
+       "LogisticRegression  0.740741  0.630418  0.529004"
       ]
      },
      "execution_count": 33,
@@ -2493,7 +2504,7 @@
     }
    ],
    "source": [
-    "report = pd.DataFrame(index=[\"KNN\", 'Decision Tree','SVM','LogisticRegression'], \n",
+    "report = pd.DataFrame(index=[\"KNN\", 'Decision Tree','SVM','LogisticRegression'],\n",
     "                      data=[[neigh_jss,neigh_f1,'NA'],\n",
     "                            [drugTree_jss, drugTree_f1,'NA'],\n",
     "                            [SprtVM_jss, SprtVM_f1,'NA'],\n",
